--- a/order_details.html
+++ b/order_details.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="order_details.css">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     
     <title>GNGBD-Order Details</title>
 </head>
@@ -36,8 +38,63 @@
 
     <!-- Order Details Start Here  -->
 
+	<div class="customer-view">
+		<div class="header-point">
+		<h4>
+			Customer
+		</h4>
+		</br>
+		<div class="desc">
+			<p>First Name: <span>MD.ADMIN RAHMAN</span></p>
+			<p>Contact Number: <span>MD.ADMIN RAHMAN</span></p>
+			<p>Addres: <span>MD.ADMIN RAHMAN</span></p>
+			<p>Payment Status: <span class="stat">PAID OR UNPAID</span></p>
+			<p>Payment System: <span class="pay_sys">NAGAD</span></p>
+		</div>
+		</div>
+		
+	</div>
+	
 
 
+	<div class="status-bar">
+		<div class="status-header">
+		<h4>
+			Order Status
+		</h4>
+		<div class="progress">
+			<ul>
+				<li>
+					<img src="pending.png"></br>
+					<i class="fa fa-check" aria-hidden="true"></i>
+
+					<p class="stats-text">Pending</p>
+				</li>
+				<li>
+					<img src="processing.png"></br>
+					<i class="fa fa-check" aria-hidden="true"></i>
+					<p class="stats-text">Processing</p>
+				</li>
+				<li>
+					<img src="picked.png"></br>
+					<i class="fa fa-check" aria-hidden="true"></i>
+					<p class="stats-text">Picked</p>
+				</li>
+				<li>
+					<img src="sipped.png"></br>
+					<i class="fa fa-check" aria-hidden="true"></i>
+					<p class="stats-text">Shipped</p>
+				</li>
+				<li>
+					<img src="delivered.png"></br>
+					<i class="fa fa-check" aria-hidden="true"></i>
+					<p class="stats-text">Delivered</p>
+				</li>
+			</ul>
+		</div>
+		</div>
+	</div>
+	
 
 
 
